# pinch

./: .gitignore  CONTRIBUTING.md  README.md  START-PINCH.bat  build.bat  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: run_pinch.py
src/pinch/: __init__.py  __main__.py  app.py  auth.py  autostart.py  config.py  popup_view.py  settings.py  settings_ui.py  setup_wizard.py  shared_state.py  taskbar_overlay.py  theme.py  tray_icon.py  usage_api.py  usage_monitor.py  utils.py
