[project]
name = "pinch-monitor"
version = "1.0.0"
description = "Real-time Claude usage monitor for your Windows taskbar."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jarred Kern", email = "darkcandylord@users.noreply.github.com"},
]
keywords = ["claude", "anthropic", "usage", "monitor", "taskbar", "system-tray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "certifi>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/DarkCandyLord/pinch"
Repository = "https://github.com/DarkCandyLord/pinch"
Issues = "https://github.com/DarkCandyLord/pinch/issues"

[project.gui-scripts]
pinch = "pinch.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
